html OK, inicializado CSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
-  <p class="colorp">Hello Wolrd</p>
+  <container class="container">
+    <div>
+      <img src="./assets/images/image-qr-code.png" alt="Imagem Codigo QR Code" title="">
+    </div>
+    <div>
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>Scan the QR code to visit Frontend Mentor an take your condig skills to the next level</p>
+    </div>
+
+  </container>
 </body>
 
 </html>
